syntax = "proto3";

package sec01;

option java_package = "com.grpc_playground.grcp_playgroud.model.sec06";
option java_multiple_files = true;

message BalanceCheckRequest {
    int32 account_number = 1;
}

message AccountBalance {
    int32 account_number = 1;
    int32 balance = 2;
}

service BankService {
    rpc GetAccountBalance(BalanceCheckRequest) returns (AccountBalance);
}